[package]
name = "xmlsql"
description = "Represent and query an XML document as an SQLite database"
version = "0.1.0"
edition = "2021"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cssparser = "0.28.1"
quick-xml = "0.30.0"
rayon = "1.7.0"
rusqlite = { git = "https://github.com/necessary-nu/rusqlite", branch = "feature/unbundle" }
selectors = "0.23.0"
tempfile = "3.7.0"
thiserror = "1.0.44"
