[package]
name = "xmlsql"
description = "Represent and query an XML document as an SQLite database"
version = "0.1.0"
edition = "2021"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
cssparser = "0.28.1"
memmap2 = "0.9.0"
rusqlite = { git = "https://github.com/necessary-nu/rusqlite", branch = "feature/unbundle" }
selectors = "0.23.0"
serde_json = "1.0.107"
speedate = "0.12.0"
tempfile = "3.7.0"
thiserror = "1.0.44"
unic-ucd = "0.9.0"
uuid = { version = "1.4.1", features = ["v5", "v4"] }
xmlparser = "0.13.6"
